--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -17,8 +17,16 @@
       href: connect-python.md
     - name: Node.js
       href: connect-nodejs.md
+    - name: Java
+      href: connect-java.md
+    - name: Ruby
+      href: connect-ruby.md
+    - name: PHP
+      href: connect-php.md
     - name: .NET
       href: connect-csharp.md
+    - name: Go
+      href: connect-go.md
 - name: Självstudier
   items:
   - name: 1 – Utforma en databas
@@ -97,7 +105,9 @@
     href: /cli/azure/postgres
 - name: Resurser
   items:
-  - name: Prissättning
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Priser
     href: https://azure.microsoft.com/pricing/details/postgresql/
   - name: MSDN-forum
     href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL
