--- a/articles/sql-database/index.yml
+++ b/articles/sql-database/index.yml
@@ -52,7 +52,7 @@ sections:
   - type: list
     style: ordered
     items:
-    - html: <a href="/azure/sql-database/sql-database-design-first-database">Skapa och utforma schemat för en ny SQL-databas</a>
+    - html: '<a href="/azure/sql-database/sql-database-design-first-database">Skapa och utforma schemat för en ny SQL-databas med SSMS</a> eller <a href="/azure/sql-database/sql-database-design-first-database-csharp">Skapa och utforma schemat för en ny SQL-databas med C#</a>'
     - html: <a href="/azure/sql-database/sql-database-migrate-your-sql-server-database">Migrera en befintlig SQL Server-databas för att använda Azure SQL Database</a>
     - html: <a href="/azure/sql-database/sql-database-security-tutorial">Skydda din SQL-databas</a>
     - html: <a href="/azure/sql-database/sql-database-performance-tutorial">Förbättra prestanda för SQL-databasen</a>
@@ -85,7 +85,7 @@ sections:
     className: cardsD
     items:
     - title: Kommandorad
-      html: <p><a href="/powershell/resourcemanager/azurerm.sql/v2.3.0/azurerm.sql">Azure PowerShell</a></p><p><a href="/powershell/elasticdatabasejobs/v0.8.33/elasticdatabasejobs">Azure PowerShell (elastisk databas)</a></p><p><a href="/cli/azure/sql">Azure CLI 2.0</a></p>
+      html: '<p><a href="/powershell/module/azurerm.sql/#sql">Azure PowerShell</a></p><p><a href="/powershell/module/elasticdatabasejobs/#elasticdatabasejobs">Azure PowerShell (elastisk databas)</a></p><p><a href="/cli/azure/sql">Azure CLI 2.0</a></p>'
     - title: Språk
       html: '<p><a href="/dotnet/api/microsoft.azure.management.sql.models">.NET</a></p><p><a href="/java/api/com.microsoft.azure.management.sql">Java</a></p><p><a href="https://msdn.microsoft.com/library/mt652093.aspx">Node.js</a></p><p><a href="https://msdn.microsoft.com/library/mt652092.aspx">Python</a></p><p><a href="https://msdn.microsoft.com/library/mt691981.aspx">Ruby</a></p><p><a href="https://msdn.microsoft.com/library/dn865013.aspx">PHP</a></p><p><a href="https://msdn.microsoft.com/library/azure/bb510741.aspx">T-SQL</a></p>'
     - title: REST
