--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -33,8 +33,10 @@
       href: sql-database-connect-query-ruby.md
 - name: Självstudier
   items:
-  - name: 1 – Skapa/utforma ny SQL-databas
+  - name: 1 – Utforma DB med hjälp av SSMS
     href: sql-database-design-first-database.md
+  - name: 1 – Utforma DB med hjälp av .NET
+    href: sql-database-design-first-database-csharp.md
   - name: 2 – Migrera SQL Server-databas
     href: sql-database-migrate-your-sql-server-database.md
   - name: 3 – Skydda din SQL-databas
@@ -55,10 +57,8 @@
   items:
   - name: Servrar och databaser
     items:
-    - name: Databaser
-      href: sql-database-overview.md
-    - name: Servrar
-      href: sql-database-server-overview.md
+    - name: Översikt
+      href: sql-database-servers-databases.md
     - name: Tjänstnivåer
       href: sql-database-service-tiers.md
     - name: Elastiska pooler
@@ -75,8 +75,6 @@
       href: sql-database-paas-vs-sql-server-iaas.md  
     - name: Funktioner
       href: sql-database-features.md
-    - name: Verktyg
-      href: sql-database-manage-overview.md
   - name: Säkerhet
     items:
     - name: Översikt
@@ -100,7 +98,7 @@
     - name: TDE med SQL DB
       href: https://msdn.microsoft.com/library/dn948096
     - name: Alltid krypterad
-      href: https://msdn.microsoft.com/library/mt163865.aspx
+      href: https://docs.microsoft.com/sql/relational-databases/security/encryption/always-encrypted-database-engine
     - name: Datamaskning
       href: sql-database-dynamic-data-masking-get-started.md
   - name: Verksamhetskontinuitet
@@ -139,6 +137,8 @@
       href: sql-database-import.md
     - name: Exportera en databas
       href: sql-database-export.md
+    - name: Synkronisera data
+      href: sql-database-sync-data.md
   - name: Övervaka och finjustera
     items:
     - name: Översikt
@@ -391,6 +391,8 @@
       href: https://msdn.microsoft.com/library/mt654048.aspx
 - name: Resurser
   items:
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
   - name: VANLIGA FRÅGOR OCH SVAR
     href: sql-database-faq.md
   - name: Offentliga datauppsättningar
