--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -37,7 +37,7 @@
     href: tutorial-monitoring.md
   - name: 11 – Hantera säkerhet för virtuella datorer
     href: tutorial-azure-security.md
-  - name: 12 – Jenkins CI/CD
+  - name: 12 – Distribuera Jenkins
     href: tutorial-jenkins-github-docker-cicd.md
 - name: Exempel
   items:
@@ -204,6 +204,8 @@
       href: cli-ps-findimage.md
     - name: Skapa anpassade avbildningar av en virtuell dator
       href: create-upload-generic.md
+    - name: Ladda ned en virtuell hårddisk
+      href: download-vhd.md
     - name: Ladda upp anpassade avbildningar av en virtuell dator
       href: upload-vhd.md
     - name: Skapa en avbildning av en befintlig virtuell dator
@@ -331,6 +333,8 @@
       href: install-mongodb.md
     - name: MySQL
       href: mysql-install.md
+    - name: OpenShift
+      href: openshift-get-started.md
     - name: PostgreSQL
       href: postgresql-install.md
     - name: Distribuera LAMP-stack
@@ -378,6 +382,8 @@
       href: migration-classic-resource-manager-faq.md
   - name: Felsöka
     items:
+    - name: Återställ lösenord för virtuell Linux-dator
+      href: virtual-machines-linux-reset-password.md
     - name: Förstå en omstart av systemet
       href: understand-vm-reboot.md
     - name: SSH-anslutningar
@@ -393,6 +399,8 @@
     - name: Allokeringsfel
       href: allocation-failure.md
     - name: Distributionsproblem
+      href: troubleshoot-deploy-vm.md
+    - name: Skapa en virtuell dator
       href: troubleshoot-deployment-new-vm.md
     - name: Distribuera om virtuell dator till en ny Azure-nod
       href: redeploy-to-new-node.md
@@ -424,6 +432,8 @@
   items:
   - name: Skapa mallar
     href: ../../azure-resource-manager/resource-group-authoring-templates.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
   - name: Community-mallar
     href: https://azure.microsoft.com/documentation/templates
   - name: Prissättning
