--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -2,120 +2,125 @@
   href: index.yml
 - name: Översikt
   items:
-  - name: Azure DB för MySQL
-    href: overview.md
+    - name: Azure DB för MySQL
+      href: overview.md
 - name: Snabbstarter
   expanded: true
   items:
-  - name: Skapa DB – Portal
-    href: quickstart-create-mysql-server-database-using-azure-portal.md
-  - name: Skapa DB – Azure CLI
-    href: quickstart-create-mysql-server-database-using-azure-cli.md
-  - name: Ansluta och fråga
-    items:
-    - name: PHP
-      href: connect-php.md
-    - name: Java
-      href: connect-java.md
+    - name: Skapa DB – Portal
+      href: quickstart-create-mysql-server-database-using-azure-portal.md
+    - name: Skapa DB – Azure CLI
+      href: quickstart-create-mysql-server-database-using-azure-cli.md
+    - name: Ansluta och fråga
+      items:
+        - name: PHP
+          href: connect-php.md
+        - name: Java
+          href: connect-java.md
+        - name: Python
+          href: connect-python.md
 - name: Självstudier
   items:
-  - name: 1 – Utforma en databas
-    items:
-    - name: Azure Portal
-      href: tutorial-design-database-using-portal.md
-    - name: Azure CLI
-      href: tutorial-design-database-using-cli.md
-  - name: 2 – Skapa en webbapp
-    items:
-    - name: 'Wordpress: portal'
-      href: ../app-service-web/app-service-web-create-web-app-from-marketplace.md?toc=%2fazure%2fmysql%2ftoc.json
-    - name: 'PHP: Azure CLI'
-      href: ../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json
+    - name: 1 – Utforma en databas
+      items:
+        - name: Azure Portal
+          href: tutorial-design-database-using-portal.md
+        - name: Azure CLI
+          href: tutorial-design-database-using-cli.md
+    - name: 2 – Skapa en webbapp
+      items:
+        - name: 'Wordpress: portal'
+          href: >-
+            ../app-service-web/app-service-web-create-web-app-from-marketplace.md?toc=%2fazure%2fmysql%2ftoc.json
+        - name: 'PHP: Azure CLI'
+          href: >-
+            ../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: sample-scripts-azure-cli.md
+    - name: Azure CLI
+      href: sample-scripts-azure-cli.md
 - name: Koncept
   items:
-  - name: Databas och servrar
-    items:
-    - name: Servrar
-      href: concepts-servers.md
-    - name: Versioner som stöds
-      href: concepts-supported-versions.md
-  - name: Resurser
-    items:
-    - name: Prisnivåer
-      href: concepts-service-tiers.md
-    - name: Compute-enheter
-      href: concepts-compute-unit-and-storage.md
-    - name: Begränsningar
-      href: concepts-limits.md
-  - name: Dataåtkomst och säkerhet
-    items:
-    - name: Brandväggsregler
-      href: concepts-firewall-rules.md
-    - name: Konfigurerar SSL
-      href: concepts-ssl-connection-security.md
-  - name: Utveckling
-    items:
-    - name: Anslutningsbibliotek
-      href: concepts-connection-libraries.md
-    - name: Programutveckling
-      href: concepts-database-application-development.md
-  - name: Migrera databasen
-    items:
-    - name: Dumpa och återställa
-      href: concepts-migrate-dump-restore.md
-    - name: Importera och exportera
-      href: concepts-migrate-import-export.md
+    - name: Databas och servrar
+      items:
+        - name: Servrar
+          href: concepts-servers.md
+        - name: Versioner som stöds
+          href: concepts-supported-versions.md
+    - name: Resurser
+      items:
+        - name: Prisnivåer
+          href: concepts-service-tiers.md
+        - name: Compute-enheter
+          href: concepts-compute-unit-and-storage.md
+        - name: Begränsningar
+          href: concepts-limits.md
+    - name: Dataåtkomst och säkerhet
+      items:
+        - name: Brandväggsregler
+          href: concepts-firewall-rules.md
+        - name: Konfigurerar SSL
+          href: concepts-ssl-connection-security.md
+    - name: Utveckling
+      items:
+        - name: Anslutningsbibliotek
+          href: concepts-connection-libraries.md
+        - name: Programutveckling
+          href: concepts-database-application-development.md
+    - name: Migrera databasen
+      items:
+        - name: Dumpa och återställa
+          href: concepts-migrate-dump-restore.md
+        - name: Importera och exportera
+          href: concepts-migrate-import-export.md
 - name: Instruktionsguider
   items:
-  - name: Hantera en server
-    items:
-    - name: Azure Portal
-      href: howto-create-manage-server-portal.md
-  - name: Brandväggsregler
-    items:
-    - name: Azure Portal
-      href: howto-manage-firewall-using-portal.md
-    - name: Azure CLI
-      href: howto-manage-firewall-using-cli.md
-  - name: Återställ en server
-    items:
-    - name: Azure Portal
-      href: howto-restore-server-portal.md
-  - name: Anslut program
-    items:
-    - name: Anslutningssträngar
-      href: howto-connection-string.md
-    - name: Konfigurera SSL
-      href: howto-configure-ssl.md
-    - name: Webbappar
-      href: howto-connect-webapp.md
-  - name: Konfigurera serverparametrar
-    items:
-    - name: Azure Portal
-      href: howto-server-parameters.md
+    - name: Hantera en server
+      items:
+        - name: Azure Portal
+          href: howto-create-manage-server-portal.md
+    - name: Brandväggsregler
+      items:
+        - name: Azure Portal
+          href: howto-manage-firewall-using-portal.md
+        - name: Azure CLI
+          href: howto-manage-firewall-using-cli.md
+    - name: Återställ en server
+      items:
+        - name: Azure Portal
+          href: howto-restore-server-portal.md
+    - name: Anslut program
+      items:
+        - name: Anslutningssträngar
+          href: howto-connection-string.md
+        - name: Konfigurera SSL
+          href: howto-configure-ssl.md
+        - name: Webbappar
+          href: howto-connect-webapp.md
+    - name: Konfigurera serverparametrar
+      items:
+        - name: Azure Portal
+          href: howto-server-parameters.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/mysql
+    - name: Azure CLI
+      href: /cli/azure/mysql
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Priser
-    href: https://azure.microsoft.com/pricing/details/mysql/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/forums/security/en-US/home?forum=AzureDatabaseforMySQL
-  - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-database-mysql
-  - name: Videoklipp
-    href: videos.md
-  - name: Begär en funktion
-    href: https://feedback.azure.com/forums/597982-azure-database-for-mysql
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Supportalternativ
-    href: https://azure.microsoft.com/support/options/
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Priser
+      href: 'https://azure.microsoft.com/pricing/details/mysql/'
+    - name: MSDN-forum
+      href: >-
+        https://social.msdn.microsoft.com/forums/security/en-US/home?forum=AzureDatabaseforMySQL
+    - name: Stack Overflow
+      href: 'http://stackoverflow.com/questions/tagged/azure-database-mysql'
+    - name: Videoklipp
+      href: videos.md
+    - name: Begär en funktion
+      href: 'https://feedback.azure.com/forums/597982-azure-database-for-mysql'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Supportalternativ
+      href: 'https://azure.microsoft.com/support/options/'
