--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -19,6 +19,8 @@
           href: connect-java.md
         - name: Python
           href: connect-python.md
+        - name: Node.js
+          href: connect-nodejs.md
 - name: Självstudier
   items:
     - name: 1 – Utforma en databas
