--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -371,6 +371,8 @@
               href: classic/hpcpack-cluster-namd.md
         - name: SAP på Azure
           href: ../workloads/sap/get-started.md
+        - name: Oracle på Azure
+          href: ../workloads/oracle/oracle-considerations.md
     - name: Docker på virtuella datorer
       items:
         - name: Skapa Docker-värdar med tillägget Azure Docker VM
