--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -25,6 +25,8 @@
           href: connect-nodejs.md
         - name: Ruby
           href: connect-ruby.md
+        - name: Go
+          href: connect-go.md
 - name: Självstudier
   items:
     - name: 1 – Utforma en databas
